--- a/pages/index.html
+++ b/pages/index.html
@@ -1,11 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>首页</title>
-	<link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
+	<link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body>
-	
+	<!--顶部-->
+	<div class="mod-full mod-gray">
+		<div class="grid-m1210 ptb10 ff-ss">
+			<div class="top-left">
+				<span>les乐事拆弹超市</span><a href="javascript:;" class="logo-out">退出</a>
+			</div>
+			<ul class="top-right">
+				<li><a href="">供应商</a></li>
+				<li><a href="">我的订单</a></li>
+				<li><a href="">购物车</a></li>
+				<li><a href="">收藏商品</a></li>
+				<li><a href="">个人中心</a></li>
+			</ul>
+		</div>
+	</div>
+	<!--顶部 end-->
+	<header class="mod-full ff-ss">
+		<div class="grid-m1210 pt15 cf">
+			<div class="img-logo fl">
+				<img src="../images/logo.png" alt="写货宝">
+			</div>
+			<div class="search-box fl">
+				<i class="iconfont icon-search">&#xe654;</i>
+				<input type="text" name="" class="search-input fl" placeholder="请输入供应商名称">
+				<button type="submit" class="btn search-btn fl">搜索</button>
+			</div>
+			<div class="add-supper fl">
+				<i class="iconfont icon-add-supper">&#xe64b;</i>
+				<span>添加供应商</span>
+			</div>
+			<div class="qrcode-tb fr">
+				<span>商家app</span>
+				<img src="../images/supper-qr.jpg" alt="商家app" class="qrcode-img">
+			</div>
+			<div class="qrcode-tb fr">
+				<span>供应商app</span>
+				<img src="../images/supper-qr.jpg" alt="供应商app" class="qrcode-img">
+			</div>
+		</div>
+		<nav class="grid-m1210 pt25b10">
+			<ul class="nav">
+				<li><a href="">全部供应</a></li>
+				<li><a href="">副食</a></li>
+				<li><a href="">日化</a></li>
+				<li><a href="">百货</a></li>
+				<li><a href="">酒水饮料</a></li>
+				<li><a href="">奶制品</a></li>
+				<li><a href="">冷藏食品</a></li>
+				<li><a href="">生鲜水果</a></li>
+				<li><a href="">茶叶</a></li>
+				<li><a href="">调味品</a></li>
+				<li><a href="">文化用品</a></li>
+				<li><a href="">儿童玩具</a></li>
+			</ul>
+		</nav>
+	</header>
+	<div class="mod-full mod-gray">
+		<div class="grid-m1210 pt25b75">
+			<h4 class="title-h">日化</h2>
+			<div class="shop-info cf">
+				<a href="" class="shop fl">
+					<img src="../images/good-logo.jpg" alt="" class="shop-img">
+					<div class="intro fr">
+						<p class="shop-name">好运来超市批发厂...</p>
+						<p class="shop-des">茶几ids爱欧迪静安寺安寺...</p>
+					</div>
+				</a>
+				<a href="" class="sales fl">
+					<img src="../images/huod.png" alt="" class="shop-img">
+					<div class="intro fr">
+						<p class="shop-name">满99减10</p>
+						<p class="shop-des">买一送一</p>
+					</div>
+				</a>
+				<a href="" class="sales fl">
+					<img src="../images/huod.png" alt="" class="shop-img">
+					<div class="intro fr">
+						<p class="shop-name">满99减10</p>
+						<p class="shop-des">买一送一</p>
+					</div>
+				</a>
+				<a href="" class="go-edit fr">去写货<i class="iconfont icon-goedit">&#xe64f;</i></a>
+			</div>
+			<ul class="list mb25">
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+			</ul>
+			<div class="shop-info cf">
+				<a href="" class="shop fl">
+					<img src="../images/good-logo.jpg" alt="" class="shop-img">
+					<div class="intro fr">
+						<p class="shop-name">好运来超市批发厂...</p>
+						<p class="shop-des">茶几ids爱欧迪静安寺安寺...</p>
+					</div>
+				</a>
+				<a href="" class="sales fl">
+					<img src="../images/huod.png" alt="" class="shop-img">
+					<div class="intro fr">
+						<p class="shop-name">满99减10</p>
+						<p class="shop-des">买一送一</p>
+					</div>
+				</a>
+				<a href="" class="sales fl">
+					<img src="../images/huod.png" alt="" class="shop-img">
+					<div class="intro fr">
+						<p class="shop-name">满99减10</p>
+						<p class="shop-des">买一送一</p>
+					</div>
+				</a>
+				<a href="" class="go-edit fr">去写货<i class="iconfont icon-goedit">&#xe64f;</i></a>
+			</div>
+			<ul class="list">
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+			</ul>
+			</div>
+	</div>
+	<footer class="mod-full">
+		<div class="grid-m1210">
+			<div class="footer-main cf">
+				<div class="links fl">
+					<a href="" target="_blank">关于知货</a>
+					<a href="" target="_blank">我是供应商</a>
+					<a href="" target="_blank">我要开店</a>
+					<a href="" target="_blank">公司介绍</a>
+					<a href="" target="_blank">申请供应商</a>
+					<a href="" target="_blank">申请商家</a>
+					<a href="" target="_blank">关于我们</a>
+				</div>
+				<div class="qrcode-lr fl">
+					<img src="../images/qrcode-m.jpg" alt="商家app">
+					<div class="qrcode-info fr">
+						<span>供应商APP</span>
+						<p>扫一扫，掌上供货管理</p>
+					</div>
+				</div>
+				<div class="qrcode-lr fr">
+					<img src="../images/qrcode-m.jpg" alt="供应商app">
+					<div class="qrcode-info fr">
+						<span>商家APP</span>
+						<p>扫一扫，写货更方便</p>
+					</div>
+				</div>
+			</div>
+			<p class="copyright">
+				© 2016—2017 XIEHUOBAO.COM　四川科技有限公司　京ICP备17009001号-1
+			</p>
+		</div>
+	</footer>
 </body>
+
 </html>
