--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,12 @@
 	<div class="mod-full mod-gray">
 		<div class="grid-m1210 ptb10 ff-ss">
 			<div class="top-left">
-				<span>les乐事拆弹超市</span><a href="javascript:;" class="logo-out">退出</a>
+				<!-- 未登陆 -->
+				<a href="" class="login">亲，请登录</a><a href="" class="free-regist">免费注册</a>
+				<!-- 未登陆 end-->
+				<!-- 登陆 -->
+				<!--<span>les乐事拆弹超市</span><a href="javascript:;" class="logo-out">退出</a>-->
+				<!-- 登陆 end-->
 			</div>
 			<ul class="top-right">
 				<li><a href="">供应商</a></li>
@@ -47,19 +52,23 @@
 				<img src="../images/supper-qr.jpg" alt="供应商app" class="qrcode-img">
 			</div>
 		</div>
-		<nav class="grid-m1210 pt25b10">
-			<ul class="nav">
-				<li><a href="">全部供应</a></li>
-				<li><a href="">副食</a></li>
-				<li><a href="">日化</a></li>
-				<li><a href="">百货</a></li>
-				<li><a href="">酒水饮料</a></li>
-				<li><a href="">奶制品</a></li>
-				<li><a href="">冷藏食品</a></li>
-				<li><a href="">生鲜水果</a></li>
-				<li><a href="">茶叶</a></li>
-				<li><a href="">调味品</a></li>
-				<li><a href="">文化用品</a></li>
+		<nav class="grid-m1210">
+			<ul class="nav-list">
+				<li><a href="" class="current">全部供应</a><span class="line"></span></li>
+				<li><a href="">副食</a><span class="line"></span></li>
+				<li><a href="">日化</a><span class="line"></span></li>
+				<li><a href="">百货</a><span class="line"></span></li>
+				<li><a href="">酒水饮料</a><span class="line"></span></li>
+				<li><a href="">奶制品</a><span class="line"></span></li>
+				<li><a href="">冷藏食品</a><span class="line"></span></li>
+				<li><a href="">生鲜水果</a><span class="line"></span></li>
+				<li><a href="">茶叶</a><span class="line"></span></li>
+				<li><a href="">调味品</a><span class="line"></span></li>
+				<li><a href="">文化用品</a><span class="line"></span></li>
+				<li><a href="">儿童玩具</a><span class="line"></span></li>
+				<li><a href="">文化用品</a><span class="line"></span></li>
+				<li><a href="">儿童玩具</a><span class="line"></span></li>
+				<li><a href="">文化用品</a><span class="line"></span></li>
 				<li><a href="">儿童玩具</a></li>
 			</ul>
 		</nav>
@@ -293,6 +302,28 @@
 			</p>
 		</div>
 	</footer>
+	<div class="sidebar side-fixed">
+		<a href="" class="item current">
+			<i class="iconfont">&#xe64b;</i>
+			<span>添加供应</span>
+		</a>
+		<a href="" class="item">
+			<i class="iconfont">&#xe64b;</i>
+			<span>写货</span>
+		</a>
+		<a href="" class="item">
+			<i class="iconfont">&#xe650;</i>
+			<span>订单</span>
+		</a>
+		<a href="" class="item">
+			<i class="iconfont">&#xe658;</i>
+			<span>购物车</span>
+		</a>
+		<a href="" class="item go-top">
+			<i class="iconfont icon-go-top">&#xe667;</i>
+			<span>顶部</span>
+		</a>
+	</div>
 </body>
 
 </html>
