--- a/pages/index.html
+++ b/pages/index.html
@@ -40,7 +40,7 @@
 				<button type="submit" class="btn search-btn fl">搜索</button>
 			</div>
 			<div class="add-supper fl">
-				<i class="iconfont icon-add-supper">&#xe64b;</i>
+				<i class="iconfont icon-add-supper">&#xe67a;</i>
 				<span>添加供应商</span>
 			</div>
 			<div class="qrcode-tb fr">
@@ -274,9 +274,9 @@
 		<div class="grid-m1210">
 			<div class="footer-main cf">
 				<div class="links fl">
-					<a href="" target="_blank">关于知货</a>
-					<a href="" target="_blank">我是供应商</a>
-					<a href="" target="_blank">我要开店</a>
+					<a href="" target="_blank" class="f-16">关于写货</a>
+					<a href="" target="_blank" class="f-16">我是供应商</a>
+					<a href="" target="_blank" class="f-16">我要开店</a>
 					<a href="" target="_blank">公司介绍</a>
 					<a href="" target="_blank">申请供应商</a>
 					<a href="" target="_blank">申请商家</a>
@@ -304,7 +304,7 @@
 	</footer>
 	<div class="sidebar side-fixed">
 		<a href="" class="item current">
-			<i class="iconfont">&#xe64b;</i>
+			<i class="iconfont">&#xe67a;</i>
 			<span>添加供应</span>
 		</a>
 		<a href="" class="item">
