--- a/pages/supplier01.html
+++ b/pages/supplier01.html
@@ -125,14 +125,14 @@
 				</li>
 			</ul>
 		</div>
-		<!-- 底部 -->
+	<!-- 底部 -->
 	<footer class="mod-full">
 		<div class="grid-m1210">
 			<div class="footer-main cf">
 				<div class="links fl">
-					<a href="" target="_blank">关于知货</a>
-					<a href="" target="_blank">我是供应商</a>
-					<a href="" target="_blank">我要开店</a>
+					<a href="" target="_blank" class="f-16">关于写货</a>
+					<a href="" target="_blank" class="f-16">我是供应商</a>
+					<a href="" target="_blank" class="f-16">我要开店</a>
 					<a href="" target="_blank">公司介绍</a>
 					<a href="" target="_blank">申请供应商</a>
 					<a href="" target="_blank">申请商家</a>
