--- a/pages/supplier01.html
+++ b/pages/supplier01.html
@@ -9,47 +9,60 @@
 
 <body>
 	<!--顶部-->
-	<div class="mod-full mod-bg-img">
-		<div class="grid-m1210 ptb10">
-			<div class="top-left">
-				<!-- 未登陆 -->
-				<a href="" class="login">亲，请登录</a><a href="" class="free-regist">免费注册</a>
-				<!-- 未登陆 end-->
+	<div class="mod-full  shop-topbar">
+		<header class="grid-m1210">
+			<a href="/" target="_blank" class="topbar-item topbar-logo">
+				<img src="../images/xiehuo-logo.png" alt="写货宝"></a>
+			<a href="/" target="_blank" class="topbar-item">供应商</a>
+			<a href="" target="_blank" class="topbar-item">我的订单</a>
+			<a href="" target="_blank" class="topbar-item">购物车</a>
+			<a href="" target="_blank" class="topbar-item">收藏商品</a>
+			<a href="" target="_blank" class="topbar-item">个人中心</a>
+			<div class="topbar-right">
 				<!-- 登陆 -->
-				<!--<span>les乐事拆弹超市</span><a href="javascript:;" class="logo-out">退出</a>-->
+				<span>les乐事拆弹超市</span><a href="javascript:;" class="logo-out">退出</a>
 				<!-- 登陆 end-->
 			</div>
-			<ul class="top-right">
-				<li><a href="">供应商</a></li>
-				<li><a href="">我的订单</a></li>
-				<li><a href="">购物车</a></li>
-				<li><a href="">收藏商品</a></li>
-				<li><a href="">个人中心</a></li>
-			</ul>
-		</div>
+		</header>
 	</div>
 	<!--顶部 end-->
-	
-		<nav class="grid-m1210">
-			<ul class="nav-list">
-				<li><a href="" class="current">全部供应</a><span class="line"></span></li>
-				<li><a href="">副食</a><span class="line"></span></li>
-				<li><a href="">日化</a><span class="line"></span></li>
-				<li><a href="">百货</a><span class="line"></span></li>
-				<li><a href="">酒水饮料</a><span class="line"></span></li>
-				<li><a href="">奶制品</a><span class="line"></span></li>
-				<li><a href="">冷藏食品</a><span class="line"></span></li>
-				<li><a href="">生鲜水果</a><span class="line"></span></li>
-				<li><a href="">茶叶</a><span class="line"></span></li>
-				<li><a href="">调味品</a><span class="line"></span></li>
-				<li><a href="">文化用品</a><span class="line"></span></li>
-				<li><a href="">儿童玩具</a><span class="line"></span></li>
-				<li><a href="">文化用品</a><span class="line"></span></li>
-				<li><a href="">儿童玩具</a><span class="line"></span></li>
-				<li><a href="">文化用品</a><span class="line"></span></li>
-				<li><a href="">儿童玩具</a></li>
-			</ul>
-		</nav>
+	<div class="mod-full mod-img">
+		<div class="grid-m1210 shopguide-info">
+			<img src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85" alt="">
+			<div class="shop-intro">
+				<p>好运来好运来好运来好运来火死好运来（郫县）</p>
+				<p>介绍介绍姐好喂喂喂翁翁翁翁无</p>
+				<p class="contact"><i class="iconfont icon-name">&#xe62e;</i><span class="shoper-txt">吴先生</span>
+					<i class="iconfont icon-tel">&#xe605;</i><span class="shoper-txt">2323232,123232323</span></p>
+			</div>
+			<div class="relative-info fr">
+				<h4 class="disprice">配送价</h4>
+				<span>300元</span>
+				<a href="javascript:;" class="go-edit fr">已合作<i class="iconfont icon-goedit">&#xe64f;</i></a>
+				
+			</div>
+		</div>
+	</div>
+	<nav class="grid-m1210">
+		<ul class="nav-list">
+			<li><a href="" class="current">全部供应</a><span class="line"></span></li>
+			<li><a href="">副食</a><span class="line"></span></li>
+			<li><a href="">日化</a><span class="line"></span></li>
+			<li><a href="">百货</a><span class="line"></span></li>
+			<li><a href="">酒水饮料</a><span class="line"></span></li>
+			<li><a href="">奶制品</a><span class="line"></span></li>
+			<li><a href="">冷藏食品</a><span class="line"></span></li>
+			<li><a href="">生鲜水果</a><span class="line"></span></li>
+			<li><a href="">茶叶</a><span class="line"></span></li>
+			<li><a href="">调味品</a><span class="line"></span></li>
+			<li><a href="">文化用品</a><span class="line"></span></li>
+			<li><a href="">儿童玩具</a><span class="line"></span></li>
+			<li><a href="">文化用品</a><span class="line"></span></li>
+			<li><a href="">儿童玩具</a><span class="line"></span></li>
+			<li><a href="">文化用品</a><span class="line"></span></li>
+			<li><a href="">儿童玩具</a></li>
+		</ul>
+	</nav>
 	<div class="mod-full mod-gray">
 		<div class="grid-m1210 pt25b75">
 			<ul class="list mb25 all-goods">
@@ -61,10 +74,10 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+							<span class="price-n">￥24.1</span>
 						</p>
-					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
+						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
 					</div>
 				</li>
 				<li>
@@ -75,10 +88,10 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+							<span class="price-n">￥24.1</span>
 						</p>
-					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
+						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
 					</div>
 				</li>
 				<li>
@@ -89,10 +102,10 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+							<span class="price-n">￥24.1</span>
 						</p>
-					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
+						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
 					</div>
 				</li>
 				<li>
@@ -103,10 +116,10 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+							<span class="price-n">￥24.1</span>
 						</p>
-					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
+						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
 					</div>
 				</li>
 				<li>
@@ -117,50 +130,50 @@
 					</div>
 					<div class="info">
 						<p class="price">
-						 <span class="price-n">￥24.1</span>
+							<span class="price-n">￥24.1</span>
 						</p>
-					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
+						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
 					</div>
 				</li>
 			</ul>
 		</div>
-	<!-- 底部 -->
-	<footer class="mod-full">
-		<div class="grid-m1210">
-			<div class="footer-main cf">
-				<div class="links fl">
-					<a href="" target="_blank" class="f-16">关于写货</a>
-					<a href="" target="_blank" class="f-16">我是供应商</a>
-					<a href="" target="_blank" class="f-16">我要开店</a>
-					<a href="" target="_blank">公司介绍</a>
-					<a href="" target="_blank">申请供应商</a>
-					<a href="" target="_blank">申请商家</a>
-					<a href="" target="_blank">关于我们</a>
-				</div>
-				<div class="qrcode-lr fl">
-					<img src="../images/qrcode-m.jpg" alt="商家app">
-					<div class="qrcode-info fr">
-						<span>供应商APP</span>
-						<p>扫一扫，掌上供货管理</p>
+		<!-- 底部 -->
+		<footer class="mod-full">
+			<div class="grid-m1210">
+				<div class="footer-main cf">
+					<div class="links fl">
+						<a href="" target="_blank" class="f-16">关于写货</a>
+						<a href="" target="_blank" class="f-16">我是供应商</a>
+						<a href="" target="_blank" class="f-16">我要开店</a>
+						<a href="" target="_blank">公司介绍</a>
+						<a href="" target="_blank">申请供应商</a>
+						<a href="" target="_blank">申请商家</a>
+						<a href="" target="_blank">关于我们</a>
+					</div>
+					<div class="qrcode-lr fl">
+						<img src="../images/qrcode-m.jpg" alt="商家app">
+						<div class="qrcode-info fr">
+							<span>供应商APP</span>
+							<p>扫一扫，掌上供货管理</p>
+						</div>
+					</div>
+					<div class="qrcode-lr fr">
+						<img src="../images/qrcode-m.jpg" alt="供应商app">
+						<div class="qrcode-info fr">
+							<span>商家APP</span>
+							<p>扫一扫，写货更方便</p>
+						</div>
 					</div>
 				</div>
-				<div class="qrcode-lr fr">
-					<img src="../images/qrcode-m.jpg" alt="供应商app">
-					<div class="qrcode-info fr">
-						<span>商家APP</span>
-						<p>扫一扫，写货更方便</p>
-					</div>
-				</div>
+				<p class="copyright">
+					© 2016—2017 XIEHUOBAO.COM　四川科技有限公司　京ICP备17009001号-1
+				</p>
 			</div>
-			<p class="copyright">
-				© 2016—2017 XIEHUOBAO.COM　四川科技有限公司　京ICP备17009001号-1
-			</p>
-		</div>
-	</footer>
+		</footer>
 
-	<!-- 底部 end -->
-	
+		<!-- 底部 end -->
+
 </body>
 
 </html>
