增加供应商

--- a/pages/index.html
+++ b/pages/index.html
@@ -98,7 +98,7 @@
 						<p class="shop-des">买一送一</p>
 					</div>
 				</a>
-				<a href="" class="go-edit fr">去写货<i class="iconfont icon-goedit">&#xe64f;</i></a>
+				<a href="" class="round-rect fr">去写货<i class="iconfont icon-arrow-right">&#xe64f;</i></a>
 			</div>
 			<ul class="list mb25">
 				<li>
@@ -194,7 +194,7 @@
 						<p class="shop-des">买一送一</p>
 					</div>
 				</a>
-				<a href="" class="go-edit fr">去写货<i class="iconfont icon-goedit">&#xe64f;</i></a>
+				<a href="" class="round-rect fr">去写货<i class="iconfont icon-arrow-right">&#xe64f;</i></a>
 			</div>
 			<ul class="list">
 				<li>
