--- a/pages/supplier01.html
+++ b/pages/supplier01.html
@@ -33,36 +33,35 @@
 				<p>好运来好运来好运来好运来火死好运来（郫县）</p>
 				<p>介绍介绍姐好喂喂喂翁翁翁翁无</p>
 				<p class="contact"><i class="iconfont icon-name">&#xe62e;</i><span class="shoper-txt">吴先生</span>
-					<i class="iconfont icon-tel">&#xe605;</i><span class="shoper-txt">2323232,123232323</span></p>
+					<i class="iconfont icon-tel">&#xe605;</i><span class="shoper-txt">2323232、123232323</span></p>
 			</div>
 			<div class="relative-info fr">
-				<h4 class="disprice">配送价</h4>
-				<span>300元</span>
-				<a href="javascript:;" class="go-edit fr">已合作<i class="iconfont icon-goedit">&#xe64f;</i></a>
+				<div class="disprice fl">
+					<span>配送价</span>
+					<span class="money">300元</span>
+				</div>
+				<a href="javascript:;" class="round-rect fr">已合作<i class="iconfont icon-arrow-right">&#xe64f;</i></a>
 				
 			</div>
 		</div>
 	</div>
-	<nav class="grid-m1210">
-		<ul class="nav-list">
-			<li><a href="" class="current">全部供应</a><span class="line"></span></li>
-			<li><a href="">副食</a><span class="line"></span></li>
-			<li><a href="">日化</a><span class="line"></span></li>
-			<li><a href="">百货</a><span class="line"></span></li>
-			<li><a href="">酒水饮料</a><span class="line"></span></li>
-			<li><a href="">奶制品</a><span class="line"></span></li>
-			<li><a href="">冷藏食品</a><span class="line"></span></li>
-			<li><a href="">生鲜水果</a><span class="line"></span></li>
-			<li><a href="">茶叶</a><span class="line"></span></li>
-			<li><a href="">调味品</a><span class="line"></span></li>
-			<li><a href="">文化用品</a><span class="line"></span></li>
-			<li><a href="">儿童玩具</a><span class="line"></span></li>
-			<li><a href="">文化用品</a><span class="line"></span></li>
-			<li><a href="">儿童玩具</a><span class="line"></span></li>
-			<li><a href="">文化用品</a><span class="line"></span></li>
-			<li><a href="">儿童玩具</a></li>
-		</ul>
-	</nav>
+	<div class="mod-full">
+		<nav class="grid-m1210">
+			<div class="shopnav-left">
+					<a href="" class="shopnav-tab current">全部商品</a>
+					<a href="" class="shopnav-tab">活动商品</a>
+					<a href="" class="shopnav-tab">收藏商品</a>
+					<div class="shop-icons-list">
+						<a href="" class="icon-item selected"><i class="iconfont">&#xe65b;</i></a>
+						<a href="" class="icon-item"><i class="iconfont">&#xe65a;</i></a>
+					</div>
+			</div>
+			<div class="shop-search-box">
+				<input type="text" name="" class="search-input fl" placeholder="请输入供应商名称">
+				<button type="submit" class="btn search-btn fl"><i class="iconfont icon-search">&#xe654;</i></button>
+			</div>
+		</nav>
+	</div>
 	<div class="mod-full mod-gray">
 		<div class="grid-m1210 pt25b75">
 			<ul class="list mb25 all-goods">
