供应商详情页

--- a/pages/supplierDetail.html
+++ b/pages/supplierDetail.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>首页</title>
-	<link rel="stylesheet" href="../css/supplier.css">
+	<title>供应商详情页</title>
+	<link rel="stylesheet" href="../css/supplierDetail.css">
 </head>
 
 <body>
@@ -45,6 +45,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<div class="mod-full">
 		<nav class="grid-m1210">
 			<div class="shopnav-left">
@@ -64,8 +65,10 @@
 	</div>
 	<div class="mod-full mod-gray">
 		<div class="grid-m1210 pt25b75">
-			<ul class="list mb25 all-goods">
+			<h4 class="title-m">收藏商品</h4>
+			<ul class="list goods-lr">
 				<li>
+					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -76,10 +79,12 @@
 							<span class="price-n">￥24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
+						<span class="round-rect shopping-car">加入购物车</span>
 					</div>
 				</li>
 				<li>
+					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -90,10 +95,12 @@
 							<span class="price-n">￥24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
+						<span class="round-rect shopping-car">加入购物车</span>
 					</div>
 				</li>
 				<li>
+					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -104,10 +111,12 @@
 							<span class="price-n">￥24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
+						<span class="round-rect shopping-car">加入购物车</span>
 					</div>
 				</li>
 				<li>
+					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -118,25 +127,27 @@
 							<span class="price-n">￥24.1</span>
 						</p>
 						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
-					</div>
-				</li>
-				<li>
-					<div class="img">
-						<a href="" target="_blank" title="">
-							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
-						</a>
-					</div>
-					<div class="info">
-						<p class="price">
-							<span class="price-n">￥24.1</span>
-						</p>
-						<a href="" target="_blank" title="" class="name">蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 </a>
-						<p class="spec">规格 550ml 成件规格 24瓶/件</p>
+						<p class="spec">规格：550ml 成件规格：24瓶/件</p>
+						<span class="round-rect shopping-car">加入购物车</span>
 					</div>
 				</li>
 			</ul>
+			<div class="shop-news-public">
+				<h4>商家公告</h4>
+				<div class="news-list">
+					<ul>
+						<li>
+							<p>测试测试上飞士大夫水电费水电费水电费</p>
+							
+						</li>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
+			</div>
 		</div>
+		
 		<!-- 底部 -->
 		<footer class="mod-full">
 			<div class="grid-m1210">
