--- a/pages/supplierDetail.html
+++ b/pages/supplierDetail.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!--顶部-->
-	<div class="mod-full  shop-topbar">
+	<div class="mod-full shop-topbar">
 		<header class="grid-m1210">
 			<a href="/" target="_blank" class="topbar-item topbar-logo">
 				<img src="../images/xiehuo-logo.png" alt="写货宝"></a>
@@ -58,17 +58,109 @@
 					</div>
 			</div>
 			<div class="shop-search-box">
-				<input type="text" name="" class="search-input fl" placeholder="请输入供应商名称">
+				<input type="text" name="" class="search-input fl" placeholder="请输入商品名称或商品编码">
 				<button type="submit" class="btn search-btn fl"><i class="iconfont icon-search">&#xe654;</i></button>
 			</div>
 		</nav>
 	</div>
 	<div class="mod-full mod-gray">
-		<div class="grid-m1210 pt25b75">
+		<div class="grid-m1210 pt25b75 detail-lists">
+			<div class="w-906">
+			<div class="shop-goods-menu">
+				<a href="">特价</a>
+				<a href="">活动商品</a>
+				<a href="">新品</a>
+				<a href="">特价</a>
+				<a href="">活动商品</a>
+				<a href="">新品</a>
+				<a href="">特价</a>
+				<a href="">活动商品</a>
+				<a href="">新品</a>
+			</div>
+				<!--推荐商品图例-->
+		<div class="good-list">
+			<h4 class="title-m">推荐</h4>
+			<ul class="list mb25 goods-list-recommend">
+				<li>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>收藏</span></div>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+				<li>
+					<div class="img">
+						<a href="" target="_blank" title="">
+							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
+						</a>
+					</div>
+					<div class="info">
+						<p class="price">
+						 <span class="price-n">￥24.1</span>
+						</p>
+					    <a href="" target="_blank" title="" class="name">蓝莓咖啡和蓝灭咖啡</a>
+						<p class="spec">规格 550ml  成件规格 24瓶/件</p>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<!--推荐商品图例 end -->
+			<!--收藏商品列表-->
+		<div class="good-list collect-goods">
 			<h4 class="title-m">收藏商品</h4>
 			<ul class="list goods-lr">
 				<li>
-					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -84,7 +176,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -100,7 +192,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -116,7 +208,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="corner-action"><i class="iconfont icon-remove">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -132,19 +224,33 @@
 					</div>
 				</li>
 			</ul>
+		</div>
+		<!--收藏商品列表 end -->
+			</div>
 			<div class="shop-news-public">
-				<h4>商家公告</h4>
-				<div class="news-list">
-					<ul>
-						<li>
-							<p>测试测试上飞士大夫水电费水电费水电费</p>
-							
-						</li>
-						<li></li>
-						<li></li>
-						<li></li>
-					</ul>
-				</div>
+				<h4 class="shop-news">商家公告</h4>
+				<ul class="news-list">
+					<li class="item">
+						<p>测试测试上飞士大夫水电费水电费水电费澈微微发慰问费</p>
+						<span>发布时间：2017-10-10</span>
+						<a href="javascript:;" class="look-more">查看详情&gt;</a>
+					</li>
+					<li class="item">
+						<p>测试测试上飞士大夫水电费水电费水电费澈微微发慰问费</p>
+						<span>发布时间：2017-10-10</span>
+						<a href="javascript:;" class="look-more">查看详情&gt;</a>
+					</li>
+					<li class="item">
+						<p>测试测试上飞士大夫水电费水电费水电费澈微微发慰问费</p>
+						<span>发布时间：2017-10-10</span>
+						<a href="javascript:;" class="look-more">查看详情&gt;</a>
+					</li>
+					<li class="item">
+						<p>测试测试上飞士大夫水电费水电费水电费澈微微发慰问费</p>
+						<span>发布时间：2017-10-10</span>
+						<a href="javascript:;" class="look-more">查看详情&gt;</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 		
