--- a/pages/supplierDetail.html
+++ b/pages/supplierDetail.html
@@ -82,7 +82,7 @@
 			<h4 class="title-m">推荐</h4>
 			<ul class="list mb25 goods-list-recommend">
 				<li>
-					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>收藏</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>收藏</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和蓝灭咖啡">
@@ -155,12 +155,12 @@
 			</ul>
 		</div>
 		<!--推荐商品图例 end -->
-			<!--收藏商品列表-->
+		<!--收藏商品列表-->
 		<div class="good-list collect-goods">
 			<h4 class="title-m">收藏商品</h4>
 			<ul class="list goods-lr">
 				<li>
-					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -176,7 +176,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -192,7 +192,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
@@ -208,7 +208,7 @@
 					</div>
 				</li>
 				<li>
-					<div class="corner-action"><i class="iconfont icon-five-star">&#xe6f7;</i><span>移除</span></div>
+					<div class="corner-action"><i class="iconfont icon-five-star">&#xe67b;</i><span>移除</span></div>
 					<div class="img">
 						<a href="" target="_blank" title="">
 							<img src="../images/good.jpg" alt="蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱蓝莓咖啡和卡斯蓝莓咖啡和卡订u按时打卡大时代ahahahe婚纱 ">
